Prepend the timestamp to the file name when building from codeship.
Codeship should run using the following command (identifying the profile with "-P codeship"):
$ mvn -Dbuild.number=123 -Dbuild.revision=ABC package -P codeship

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>codeship</id>
+            <build>
+                <finalName>${timestamp.iso}-${project.artifactId}-${project.version}</finalName>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <resources>
             <resource>
