mandatory applicationPath, http error handling and reference library reorg

--- a/src/main/resources/password/pwm/PwmConstants.properties
+++ b/src/main/resources/password/pwm/PwmConstants.properties
@@ -47,4 +47,4 @@ enableEulaDisplay=false
 databaseAccessor.keyLength=128
 missingVersionString=[Version Missing]
 applicationPathInfoFile=applicationPath.properties
-
+includedLocales=["","cs","de","el","es","fi","fr","hu","it","iw","ja","ko","nl","nn","no","pl","pt","pt_BR","sk","sv","th","tr","zh","zh_TW"]
