--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
     <context-param>
         <description>
             Explicit location of application working directory. If a relative path is specified, it is relative to the
-            deployed applications base directory.  If the value is "unspecified", the /WEB-INF directory is assumed.
+            deployed applications base directory.
         </description>
         <param-name>applicationPath</param-name>
         <param-value>unspecified</param-value>
