Bug #941830 - [Enh] SSPR does not allow sending e-mails to multiple recipients simultaneously, particularly via a template.
I updated the code to allow for supplying multiple email addresses in the "To:" field, separated by commas.  The EmailQueueManager loops through each email separately so all recipients don't see each other.  I also added some help text to the dialog explaining: "Multiple email addresses can be provided, separated by commas."

--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,12 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- container dependencies -->
         <dependency>
