continued storage refactoring configmanager login history

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -47,6 +47,7 @@ client.jsp.showIcons=true
 config.reloadOnChange=true
 config.maxJdbcJarSize=10240000
 config.maxPersistentLoginSeconds=3600
+config.login.history.maxEvents=10
 config.fileScanFrequencyMS=5017
 config.newuser.passwordPolicyCacheMS=3600000
 configEditor.queryFilter.testLimit=5000
@@ -187,6 +188,8 @@ security.html.stripInlineJavascript=false
 security.http.stripHeaderRegex=\\n|\\r|(?ism)%0A|%0D
 security.http.promiscuousEnable=false
 security.httpsServer.selfCert.futureSeconds=63113904
+security.httpsServer.selfCert.alg=RSA
+security.httpsServer.selfCert.keySize=2048
 security.responses.hashIterations=100000
 security.input.trim=true
 security.input.password.trim=false
