--- a/pom.xml
+++ b/pom.xml
@@ -334,6 +334,11 @@
             <artifactId>jdom2</artifactId>
             <version>2.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.12.1.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
