--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,11 @@
             <artifactId>derby</artifactId>
             <version>10.12.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.xeustechnologies</groupId>
+            <artifactId>jcl-core</artifactId>
+            <version>2.7</version>
+        </dependency>
     </dependencies>
 
     <repositories>
