add support for setting secure cookie flag

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -80,6 +80,7 @@ http.header.sendXSessionID=true
 http.header.sendXVersion=false
 http.header.sendXContentTypeOptions=true
 http.header.sendXXSSProtection=true
+http.cookie.default.secureFlag=auto
 http.cookie.theme.name=theme
 http.cookie.theme.age=604800
 http.cookie.locale.name=locale
