refactor settingtemplates as settings

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -66,7 +66,7 @@ http.resources.maxCacheItems=500
 http.resources.maxCacheBytes=500000
 http.resources.expirationSeconds=30240000
 http.resources.gzip.enable=true
-http.resources.pathNonceEnable=false
+http.resources.pathNonceEnable=true
 http.resources.pathNoncePrefix=nonce-
 http.resources.zipFiles=[{"url":"/public/resources/dojo","zipFile":"/public/resources/dojo.zip"},{"url":"/public/resources/flags","zipFile":"/public/resources/flags.zip"}]
 http.gzip.enable=true
