--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.jasig.mojo.jspc</groupId>
+                <artifactId>jspc-maven-plugin</artifactId>
+                <version>2.0.0</version>
+				<dependencies>
+				    <dependency>
+                        <groupId>org.jasig.mojo.jspc</groupId>
+                        <artifactId>jspc-compiler-tomcat7</artifactId>
+                        <version>2.0.0</version>
+                    </dependency>
+				</dependencies>
+            </plugin>
         </plugins>
     </build>
 
