Changed default icons, and fixed footer.
Changed the default style so the default icons come from font-awesome.  Also fixed the footer so when you resize the window, the footer doesn't flow behind the tiles.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /src/main/webapp/WEB-INF/LocalDB
 /bin/
 /src/main/webapp/WEB-INF/applicationPath.lock
+/src/main/webapp/public/resources/themes/mdefault
