--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -89,7 +89,7 @@ http.cookie.authRecord.age=604800
 http.cookie.maxReadLength=10240
 http.cookie.captchaSkip.name=captcha-key
 http.cookie.captchaSkip.age=86400
-http.cookie.login.name=LC
+http.cookie.login.name=SESSION
 http.parameter.forward=forwardURL
 http.parameter.logout=logoutURL
 http.parameter.theme=theme
