--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 src/main/webapp/public/resources/.DS_Store
 
 src/main/webapp/WEB-INF/jsp/fragment/.DS_Store
+
+src/main/webapp/public/resources/font/.DS_Store
+
+src/main/webapp/public/resources/themes/tulips/.DS_Store
