--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -62,7 +62,8 @@ health.certificate.warnSeconds=2592000
 health.ldap.cautionDurationMS=10800000
 health.java.maxThreads=1000
 health.java.minHeapBytes=67108864
-helpdesk.token.value=@RandomChar:4:0123456789@ @RandomChar:4:0123456789@
+helpdesk.token.maxAgeSeconds=120
+helpdesk.token.value=@RandomChar:6:0123456789@
 http.resources.maxCacheItems=500
 http.resources.maxCacheBytes=500000
 http.resources.expirationSeconds=30240000
@@ -145,7 +146,7 @@ logging.file.maxRollover=50
 logging.file.path=logs
 newUser.ldap.useTempPassword=auto
 newUser.token.allowPlainPassword=true
-nmas.threads.maxCount=120
+nmas.threads.maxCount=500
 nmas.threads.minSeconds=1800
 nmas.threads.maxSeconds=3000
 nmas.threads.watchdogFrequencyMs=1000
