misc minor fixes

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -101,6 +101,7 @@ http.parameter.theme=theme
 http.parameter.locale=locale
 http.parameter.passwordExpired=passwordExpired
 http.parameter.maxReadLength=10240
+http.parameter.sessionVerification=stickyRedirectTest
 http.parameter.ssoBypass=sso
 http.parameter.oauth.accessToken=access_token
 http.parameter.oauth.attributes=attributes
@@ -197,6 +198,7 @@ security.httpsServer.selfCert.keySize=2048
 security.responses.hashIterations=100000
 security.input.trim=true
 security.input.password.trim=false
+security.input.themeMatchRegex=^[0-9a-zA-Z-_]*$
 security.ws.rest.clientKeyLength=32
 security.sharedHistory.hashIterations=100000
 security.sharedHistory.hashName=SHA-512
