--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -78,6 +78,7 @@ http.gzip.enable=true
 http.errors.allowHtml=true
 http.basicAuth.charset=UTF-8
 http.body.maxReadLength=10485760
+http.header.server=@PwmAppName@
 http.header.sendXAmb=true
 http.header.sendXInstance=true
 http.header.sendXNoise=true
