nmas force cr enrollment app property

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -156,6 +156,7 @@ nmas.threads.maxCount=500
 nmas.threads.minSeconds=1800
 nmas.threads.maxSeconds=3000
 nmas.threads.watchdogFrequencyMs=1000
+nmas.ignoreNmasCrDuringForceSetupCheck=false
 oauth.id.accessGrantType=authorization_code
 oauth.id.refreshGrantType=refresh_token
 oauth.id.requestType=code
