--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -73,7 +73,8 @@ http.resources.expirationSeconds=30240000
 http.resources.gzip.enable=true
 http.resources.pathNonceEnable=false
 http.resources.pathNoncePrefix=nonce-
-http.resources.zipFiles=[{"url":"/dojo","zipFile":"/dojo.zip"},{"url":"/flags","zipFile":"/flags.zip"}]
+http.resources.webjarMappings={"/public/resources/dojo/dgrid/":"/webjars/dgrid/1.0.0/","/public/resources/dojo/dojo/":"/webjars/dojo/1.10.4/","/public/resources/dojo/dijit/":"/webjars/dijit/1.10.4/","/public/resources/dojo/dojox/":"/webjars/dojox/1.10.4/","/public/resources/font/font-awesome/":"/webjars/font-awesome/4.5.0/","/public/resources/flags/":"/webjars/famfamfam-flags/1.0.0/dist/"}
+http.resources.zipFiles=[]
 http.gzip.enable=true
 http.errors.allowHtml=true
 http.basicAuth.charset=UTF-8
