--- a/pom.xml
+++ b/pom.xml
@@ -395,6 +395,12 @@
             <artifactId>jcl-core</artifactId>
             <version>2.7</version>
         </dependency>
+        <dependency>
+            <groupId>net.iharder</groupId>
+            <artifactId>base64</artifactId>
+            <version>2.3.8</version>
+        </dependency>
+
 
         <!-- client webjar dependencies -->
         <!-- changes in client dependencies require updating AppProperty.properties:http.resources.webjarMappings -->
