helpdesk verification enhancements

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -65,8 +65,10 @@ health.certificate.warnSeconds=2592000
 health.ldap.cautionDurationMS=10800000
 health.java.maxThreads=1000
 health.java.minHeapBytes=67108864
-helpdesk.token.maxAgeSeconds=120
+helpdesk.token.maxAgeSeconds=300
 helpdesk.token.value=@RandomChar:6:0123456789@
+helpdesk.verification.invalid.delayMs=2000
+helpdesk.verification.timeoutSeconds=3600
 http.resources.maxCacheItems=500
 http.resources.maxCacheBytes=500000
 http.resources.expirationSeconds=30240000
