Fixed 'Unsupported Media Type' error when Jersey mappings take POJOs as parameters on a POST request.
Added a maven dependency for converting json entities into Java objects.

--- a/pom.xml
+++ b/pom.xml
@@ -341,6 +341,11 @@
             <version>2.22.2</version>
         </dependency>
         <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.22.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.jasig.cas.client</groupId>
             <artifactId>cas-client-core</artifactId>
             <version>3.4.1</version>
