storage library updates

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -138,11 +138,11 @@ ldap.guid.pattern=@UUID@
 ldap.browser.maxEntries=1000
 ldap.search.paging.enable=auto
 ldap.search.paging.size=500
-localdb.compression.enabled=true
+localdb.compression.enabled=false
 localdb.decompression.enabled=true
 localdb.compression.minSize=1024
 localdb.implementation=password.pwm.util.localdb.Berkeley_LocalDB
-localdb.initParameters=je.maxMemory=10000000;;;je.log.fileMax=10000000;;;je.cleaner.minUtilization=70
+localdb.initParameters=
 macro.randomChar.maxLength=100
 macro.ldapAttr.maxLength=100
 naaf.id=41414141414141414141414141414141
