--- a/pom.xml
+++ b/pom.xml
@@ -353,7 +353,12 @@
         <dependency>
             <groupId>org.mapdb</groupId>
             <artifactId>mapdb</artifactId>
-            <version>1.0.5</version>
+            <version>3.0.0-M2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.176</version>
         </dependency>
         <dependency>
             <groupId>net.glxn</groupId>
