--- a/src/main/resources/password/pwm/PwmConstants.properties
+++ b/src/main/resources/password/pwm/PwmConstants.properties
@@ -34,15 +34,13 @@ defaultBadPasswordAttempt=BADPASSWORDATTEMPT
 log.removedValue=*hidden*
 pwm.appName=PWM
 trial=false
-url.pwm-home=http://code.google.com/p/pwm
+url.pwm-home=https://github.com/pwm-project/pwm
 url.pwm-cloud=https://pwm-cloud.appspot.com
 versionCheckFrequencyMs=129600000
 versionCheckFailRetryMs=1800000
 statisticsPublishFrequencyMs=259200000
 paramName.token=token
 defaultConfigFilename=PwmConfiguration.xml
-pwmDBLoggerMaxQueueSize=50000
-pwmDBLoggerMaxDirtyBufferMS=500
 enableEulaDisplay=false
 databaseAccessor.keyLength=128
 missingVersionString=[Version Missing]
