--- a/src/main/resources/password/pwm/PwmConstants.properties
+++ b/src/main/resources/password/pwm/PwmConstants.properties
@@ -33,7 +33,7 @@ httpRestClientKey=X-RestClientKey
 defaultBadPasswordAttempt=BADPASSWORDATTEMPT
 log.removedValue=*hidden*
 pwm.appName=PWM
-trial=false
+trial=${pwm.trial}
 url.pwm-home=https://github.com/pwm-project/pwm
 url.pwm-cloud=https://pwm-cloud.appspot.com
 versionCheckFrequencyMs=129600000
