fix idle timeout

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@
 .idea/
 /*.iml
 
+# OS folder info
+.directory
+.DS_Store
+.DS_Store?
+
+
 # Older PWM versions defaulted the applicationPath dir to WEB-INF.  This section ignores them if the applicationPath is set to WEB-INF.
 /src/main/webapp/WEB-INF/logs
 /src/main/webapp/WEB-INF/PwmConfiguration.xml
