--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -21,7 +21,7 @@
 #
 
 # Default application values.  This is not an end user modifiable file.  Values
-# can be overridden in the configuration.
+# can be overridden in configuration at Settings -> Application -> App Property Overrides
 
 application.fileLock.filename=applicationPath.lock
 application.fileLock.waitSeconds=120
