--- a/pom.xml
+++ b/pom.xml
@@ -405,6 +405,11 @@
             <artifactId>base64</artifactId>
             <version>2.3.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
 
 
         <!-- client webjar dependencies -->
