minor misc bugfixes

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -26,6 +26,7 @@
 application.fileLock.filename=applicationPath.lock
 application.fileLock.waitSeconds=120
 audit.events.emailFrom=Audit Event Notification <@DefaultEmailFromAddress@>
+audit.events.emailSubject=@PwmAppName@ - Audit Event - %EVENT%
 audit.vault.maxRecords=100000000
 backup.path=backup
 backup.config.count=20
@@ -73,7 +74,7 @@ http.resources.maxCacheItems=500
 http.resources.maxCacheBytes=500000
 http.resources.expirationSeconds=30240000
 http.resources.gzip.enable=true
-http.resources.pathNonceEnable=false
+http.resources.pathNonceEnable=true
 http.resources.pathNoncePrefix=nonce-
 http.resources.webjarMappings={"/public/resources/dojo/dgrid/":"/webjars/dgrid/1.0.0/","/public/resources/dojo/dojo/":"/webjars/dojo/1.10.4/","/public/resources/dojo/dijit/":"/webjars/dijit/1.10.4/","/public/resources/dojo/dojox/":"/webjars/dojox/1.10.4/","/public/resources/font/font-awesome/":"/webjars/font-awesome/4.5.0/","/public/resources/flags/":"/webjars/famfamfam-flags/1.0.0/dist/"}
 http.resources.zipFiles=[]
@@ -107,7 +108,7 @@ http.parameter.locale=locale
 http.parameter.passwordExpired=passwordExpired
 http.parameter.maxReadLength=10240
 http.parameter.sessionVerification=stickyRedirectTest
-http.parameter.ssoBypass=sso
+http.parameter.ssoOverride=sso
 http.parameter.oauth.accessToken=access_token
 http.parameter.oauth.attributes=attributes
 http.parameter.oauth.clientID=client_id
