--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -51,10 +51,10 @@ config.maxPersistentLoginSeconds=3600
 config.login.history.maxEvents=10
 config.fileScanFrequencyMS=5017
 config.newuser.passwordPolicyCacheMS=3600000
+config.theme=pwm
 configEditor.queryFilter.testLimit=5000
 configEditor.idleTimeoutSeconds=900
 configGuide.idleTimeoutSeconds=3600
-configGuide.theme=pwm
 configManager.zipDebug.maxLogLines=100000
 configManager.zipDebug.maxLogSeconds=30
 form.email.regexTest=^[_+a-zA-Z0-9-]+(\\.[_a-zA-Z0-9-]+)*@[a-zA-Z0-9-]+(\\.[a-zA-Z0-9-]+)*$
@@ -91,6 +91,7 @@ http.header.sendXSessionID=true
 http.header.sendXVersion=false
 http.header.sendXContentTypeOptions=true
 http.header.sendXXSSProtection=true
+http.header.noise.length=1024
 http.cookie.default.secureFlag=auto
 http.cookie.theme.name=theme
 http.cookie.theme.age=604800
