--- a/pom.xml
+++ b/pom.xml
@@ -410,6 +410,12 @@
             <artifactId>gson</artifactId>
             <version>2.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>eu.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>1.18</version>
+        </dependency>
+
 
 
         <!-- client webjar dependencies -->
