Removed the compiled JSPs from the pwm war/jar files.
During the maven "prepare-package" phase, right before the packaging into jar and war files, the compiled jsps are deleted from the target/classes folder so they don't get included in the final artifacts.

--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,27 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>remove-compiled-jsps</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                        <configuration>
+                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                            <filesets>
+                                <fileset>
+                                    <directory>target/classes/jsp</directory>
+                                </fileset>
+                              </filesets>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
