--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -92,6 +92,7 @@ http.header.sendXVersion=false
 http.header.sendXContentTypeOptions=true
 http.header.sendXXSSProtection=true
 http.header.noise.length=1024
+http.header.csp.nonce.bytes=24
 http.cookie.default.secureFlag=auto
 http.cookie.theme.name=theme
 http.cookie.theme.age=604800
