--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -210,6 +210,7 @@ security.input.trim=true
 security.input.password.trim=false
 security.input.themeMatchRegex=^[0-9a-zA-Z-_]*$
 security.ws.rest.clientKeyLength=32
+security.ws.rest.server.secretKeyHeader=RestSecretKey
 security.sharedHistory.hashIterations=100000
 security.sharedHistory.hashName=SHA-512
 security.sharedHistory.caseInsensitive=true
