--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,103 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.github.jinnovations</groupId>
+                <artifactId>attribution-maven-plugin</artifactId>
+                <version>0.9.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-attribution-file</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <outputFile>${project.build.directory}/classes/attribution.xml</outputFile>
+                    <dependencyOverrides>
+                        <dependencyOverride>
+                            <forDependency>org.apache.axis:axis</forDependency>
+                            <projectUrl>https://axis.apache.org/axis/</projectUrl>
+                            <license>
+                                <name>Apache License, Version 2.0</name>
+                                <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+                            </license>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>net.iharder:base64</forDependency>
+                            <license>
+                                <name>Public Domain (any license you desire)</name>
+                                <url>http://iharder.sourceforge.net/current/java/base64/</url>
+                            </license>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>javax.xml:jaxrpc-api</forDependency>
+                            <projectUrl>https://java.net/projects/jax-rpc/</projectUrl>
+                            <license>
+                                <name>CDDL-1.0</name>
+                                <url>https://opensource.org/licenses/cddl1.php</url>
+                            </license>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>org.hamcrest:hamcrest-core</forDependency>
+                            <projectUrl>http://hamcrest.org/JavaHamcrest/</projectUrl>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>jaxen:jaxen</forDependency>
+                            <license>
+                                <name>Custom</name>
+                                <url>http://jaxen.codehaus.org/license.html</url>
+                            </license>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>com.novell.security.nmas:ChallengeResponseLCM</forDependency>
+                            <projectUrl>https://www.novell.com/developer/ndk/novell_modular_authentication_service.html</projectUrl>
+                            <downloadUrl>ftp://sdk.provo.novell.com/ndk/nmas/builds/cross_platform/novell-nmas-devel-2009.11.11-cross_platform.zip</downloadUrl>
+                            <license>
+                                <name>Novell Developer License Agreement</name>
+                                <url>https://www.novell.com/developer/novell_developer_license_agreement.html</url>
+                            </license>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>com.novell.security.nmas:nmasclient</forDependency>
+                            <projectUrl>https://www.novell.com/developer/ndk/novell_modular_authentication_service.html</projectUrl>
+                            <downloadUrl>ftp://sdk.provo.novell.com/ndk/nmas/builds/cross_platform/novell-nmas-devel-2009.11.11-cross_platform.zip</downloadUrl>
+                            <license>
+                                <name>Novell Developer License Agreement</name>
+                                <url>https://www.novell.com/developer/novell_developer_license_agreement.html</url>
+                            </license>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>com.novell.security.nmas:NMASToolkit</forDependency>
+                            <projectUrl>https://www.novell.com/developer/ndk/novell_modular_authentication_service.html</projectUrl>
+                            <downloadUrl>ftp://sdk.provo.novell.com/ndk/nmas/builds/cross_platform/novell-nmas-devel-2009.11.11-cross_platform.zip</downloadUrl>
+                            <license>
+                                <name>Novell Developer License Agreement</name>
+                                <url>https://www.novell.com/developer/novell_developer_license_agreement.html</url>
+                            </license>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>com.novell.security.nmas:jsso</forDependency>
+                            <projectUrl>https://www.novell.com/developer/ndk/novell_secretstore_developer_kit_for_java.html</projectUrl>
+                            <downloadUrl>ftp://sdk.provo.novell.com/ndk/nssoj/builds/cross_platform/novell-nssoj-devel-2006.02.17-1cross_platform.zip</downloadUrl>
+                            <license>
+                                <name>Novell Developer License Agreement</name>
+                                <url>https://www.novell.com/developer/novell_developer_license_agreement.html</url>
+                            </license>
+                        </dependencyOverride>
+                        <dependencyOverride>
+                            <forDependency>com.novell.security.nmas:ldap</forDependency>
+                            <projectUrl>https://www.novell.com/developer/ndk/ldap_classes_for_java.html</projectUrl>
+                            <downloadUrl>https://www.novell.com/developer/ndk/ldap_classes_for_java/novell-jldap-devel-2013.08.30.1433-xplat.zip</downloadUrl>
+                            <license>
+                                <name>Novell Developer License Agreement</name>
+                                <url>https://www.novell.com/developer/novell_developer_license_agreement.html</url>
+                            </license>
+                        </dependencyOverride>
+                    </dependencyOverrides>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
