--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -141,6 +141,7 @@ ldap.guid.pattern=@UUID@
 ldap.browser.maxEntries=1000
 ldap.search.paging.enable=auto
 ldap.search.paging.size=500
+localdb.aggressiveCompact.enabled=false
 localdb.compression.enabled=true
 localdb.decompression.enabled=true
 localdb.compression.minSize=1024
