--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -25,6 +25,7 @@
 
 application.fileLock.filename=applicationPath.lock
 application.fileLock.waitSeconds=120
+application.wordlistRetryImportSeconds=600
 audit.events.emailFrom=Audit Event Notification <@DefaultEmailFromAddress@>
 audit.events.emailSubject=@PwmAppName@ - Audit Event - %EVENT%
 audit.vault.maxRecords=100000000
@@ -82,6 +83,10 @@ http.gzip.enable=true
 http.errors.allowHtml=true
 http.basicAuth.charset=UTF-8
 http.body.maxReadLength=10485760
+http.client.socketTimeoutMs=60000
+http.client.connectTimeoutMs=60000
+http.client.requestTimeoutMs=60000
+http.client.promiscuous.wordlist.enable=true
 http.header.server=@PwmAppName@
 http.header.sendContentLanguage=true
 http.header.sendXAmb=true
