--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.pwm-project</groupId>
     <artifactId>pwm</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.8.0.1</version>
     <packaging>war</packaging>
 
     <licenses>
