delete account module

--- a/src/main/resources/password/pwm/svc/event/AuditEvent.properties
+++ b/src/main/resources/password/pwm/svc/event/AuditEvent.properties
@@ -33,6 +33,7 @@ TOKEN_CLAIMED={"xdasTaxonomy":"XDAS_AE_GRANT_ACCOUNT_ACCESS","xdasOutcome":"XDAS
 CLEAR_RESPONSES={"xdasTaxonomy":"XDAS_AE_DELETE_DATA_ITEM","xdasOutcome":"XDAS_OUT_SUCCESS"}
 CHANGE_PASSWORD={"xdasTaxonomy":"XDAS_AE_SET_CRED_ACCOUNT","xdasOutcome":"XDAS_OUT_SUCCESS"}
 UNLOCK_PASSWORD={"xdasTaxonomy":"XDAS_AE_GRANT_ACCOUNT_ACCESS","xdasOutcome":"XDAS_OUT_SUCCESS"}
+DELETE_ACCOUNT={"xdasTaxonomy":"XDAS_AE_DELETE_ACCOUNT","xdasOutcome":"XDAS_OUT_SUCCESS"}
 RECOVER_PASSWORD={"xdasTaxonomy":"XDAS_AE_GRANT_ACCOUNT_ACCESS","xdasOutcome":"XDAS_OUT_SUCCESS"}
 SET_RESPONSES={"xdasTaxonomy":"XDAS_AE_CREATE_TRUST","xdasOutcome":"XDAS_OUT_THRESHOLDS_SET"}
 SET_OTP_SECRET={"xdasTaxonomy":"XDAS_AE_CREATE_TRUST","xdasOutcome":"XDAS_OUT_THRESHOLDS_SET"}
